2005-01-09  Derek Scherger  <derek@echologic.com>

	* commands.cc (get_path_rearrangement): new function/signature for
	splitting restricted rearrangements
	(calculate_restricted_revision): use it and update to work
	similarly to calculate_current_revision
	(trusted): call app.initialize(false)
	(ls_missing): adjust for new get_path_rearrangement
	(attr): call app.initialize(true)
	(diff): merge cleanup
	(lca, lcad, explicit_merge): call app.initialize(false)
	* app_state.cc (constructor): set database app state
	(load_rcfiles): add required booleans
	* lua.{cc,hh} (load_rcfile): add required boolean
	* tests/t_add.at:
	* tests/t_diff_added_file.at:
	* tests/t_disapprove.at:
	* tests/t_drop_missing.at:
	* tests/t_heads.at:
	* tests/t_heads_discontinuous_branch.at:
	* tests/t_i18n_file.at:
	* tests/t_log_nonexistent.at:
	* tests/t_merge_add_del.at:
	* tests/t_netsync.at:
	* tests/t_netsync_pubkey.at:
	* tests/t_netsync_single.at:
	* tests/t_persistent_server_keys.at:
	* tests/t_persistent_server_revision.at:
	* tests/t_remerge.at:
	* tests/t_tags.at:
	* tests/t_update_missing.at:
	* tests/t_update_to_revision.at: add --message option to commits 
	* tests/t_merge2_add.at:
	* tests/t_merge2_data.at:
	* tests/t_netsync_unrelated.at: create working directory with new
	setup command
	* tests/t_erename.at: update for revisions
	* tests/t_no_change_deltas.at: add --revision options to diff
	* tests/t_restrictions.at: remove some cruft and update to work
	with revisions
	* tests/t_subdirs.at: pass correct --rcfile and --db options from
	within subdir
	* testsuite.at (REVERT_TO): remove MT dir before checkout, which
	now fails if MT exists, replace checkout MT/options with old
	MT/options
	(COMMIT): add --message option to commit macro
	* work.cc (read_options_map): don't overwrite option settings when
	reading options map so that command line settings take precedence

2005-01-17  graydon hoare  <graydon@pobox.com>

	* AUTHORS: Mention Wojciech and Neil.