@@ -122,10 +122,10 @@ attr_functions[["test_attr"]] =
 
 ])
 
+AT_CHECK(MONOTONE setup ., [], [ignore], [ignore])
 AT_CHECK(MONOTONE db init, [], [ignore], [ignore])
 AT_CHECK(MONOTONE read <test_keys, [], [ignore], [ignore])
 AT_CHECK(rm test_keys)
-AT_CHECK(MONOTONE setup ., [], [ignore], [ignore])
 ])
 
 # run as CHECK_SAME_STDOUT(command1, command2)
